<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/elige_un_equipo" />

    <RadioGroup
        android:id="@+id/rgEquipos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp">

        <RadioButton
            android:id="@+id/rbRealMadrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/real_madrid" />

        <RadioButton
            android:id="@+id/rbBarcelona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/barcelona" />

        <RadioButton
            android:id="@+id/rbSevilla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sevilla_fc" />

        <RadioButton
            android:id="@+id/rbBetis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/real_betis" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/introduce_un_jugador"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAniadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/a_adir" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spJugadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <TextView
            android:id="@+id/lblEstrellas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblMediaEquipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>